# homework-upstream

hw1/module_1/src/: main.rs  solution.rs
hw1/module_1/tests/: tests.rs
hw1/module_2/src/: animal.rs  coin.rs  lib.rs  main.rs  pizza.rs
hw1/module_2/tests/: tests.rs
hw1/module_3/serde1/: Cargo.toml
hw1/module_3/serde1/src/: main.rs  solution.rs
hw1/module_3/serde1/tests/: tests.rs
hw1/module_3/serde2_hashmap/: Cargo.toml
hw1/module_3/serde2_hashmap/src/: main.rs  solution.rs
hw1/module_3/serde2_hashmap/tests/: tests.rs
hw1/module_3/serde2_vector/: Cargo.toml
hw1/module_3/serde2_vector/src/: main.rs  solution.rs
hw1/module_3/serde2_vector/tests/: tests.rs
hw1/module_3/serde3/: Cargo.toml  uchicago_test.cbor
hw1/module_3/serde3/src/: main.rs  solution.rs
hw1/module_3/serde3/tests/: tests.rs
hw2/python_app/: app.py  db.py  test_db.py
hw2/sql/: 0.sql
