[package]
name = "serde3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solution"
path = "src/solution.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.0"
serde_cbor = "0.11.2"
